# weather-api

./: .dockerignore  .env.example  .gitignore  .pylintrc  Dockerfile  README.md  dev-requirements.txt  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt  start.sh
.github/workflows/: linters.yml
app/: main.py
app/api/: __init__.py  weather.py
app/core/: config.py  context_vars.py  decorators.py  exceptions.py  loggers.py
app/core/caches/: __init__.py  base_redis_cache.py  rate_limit_cache.py  weather_api_cache.py
app/core/integrations/: __init__.py  open_weather_integration.py  s3_client.py
app/core/middlewares/: __init__.py  rate_limit.py  trace.py
app/schemas/: weather.py
app/services/: weather.py
