[project]
description = "Jenesys API"
maintainers = ["yaroslav@jenesys.co"]
requires-python = ">=3.11"
version = "1.4.2"


[tool.black]
line-length = 79
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.vscode
    | _build
    | buck-out
    | build
    | dist
    | vent
  )/
)
'''

[tool.isort]
profile='black'
multi_line_output=3
line_length=79
known_first_party='app'
filter_files=true

[tool.pytest.ini_options]
asyncio_mode = "auto"
